<resources>
    <string name="app_name">OutCom</string>

    <string name="sign_in_header">Log in</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_button">LOG IN</string>
    <string name="sign_in_google_button">LOG IN WITH GOOGLE</string>
    <string name="sign_in_create_account">Dont Have an Account? <b>SIGN UP!</b></string>
    <string name="sign_in_forgot_password">Forgot Password?</string>

    <string name="teacher_profile_confirmation_button">TEACHER PROFILE CONFIRMATION</string>

    <string name="sign_up_header">Create an account</string>
    <string name="sign_up_name">Full Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_birthday">Day of birth</string>
    <string name="sign_up">Sign up</string>

    <string name="student_home_header">Find a teacher</string>
    <string name="student_home_location">Location</string>
    <string name="student_home_date">Date</string>
    <string name="student_home_search">Search</string>
    
    <string name="teacher_card_teaching">Teaches</string>
    <string name="teacher_card_placeholder">Placeholder</string>
    <string name="teacher_card_hourly_rate">Hourly Rate</string>
    <string name="teacher_card_distance">Distance</string>
    <string name="to_teacher_profile" >To teacher Profile</string>
    <string name="activities_label">Activities</string>
    <string name="availability_label">Availability</string>
    <string name="book_class_button_label">Book Class</string>


    <string name="nav_home">home</string>
    <string name="nav_chat">chat</string>
    <string name="nav_upcomming_classes">Upcomming Classes</string>
    <string name="nav_previous_classes">previous classes</string>

    
    <string-array name="student_home_languages">
        <item>Language</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>

    <!-- Strings for AppAuth, they will be removed from the project (or renamed) soon -->
    <string name="welcome_to_appauth">AppAuth</string>
    <string name="make_api_call">Make API Call</string>
    <string name="make_authorization_request">Make Authorization Request</string>
    <string name="sign_out">Sign Out</string>
    <string name="request_complete">API Call Successful.</string>
    <string name="request_failed">API Call Failed.</string>
    <string name="tools_given_name">Some FirstName</string>
    <string name="tools_family_name">LastName</string>
    <string name="tools_full_name">Some FirstName LastName</string>

</resources>
