<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teacher_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/Standard_Margin"
    app:contentPadding="@dimen/card_padding">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="4">

        <ImageView
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="0"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:text="@string/teacher_card_placeholder"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teacher_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:layout_column="1"
            android:text="@string/teacher_card_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/teacher_card_teaching" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/teacher_card_hourly_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/teacher_card_distance" />

        <TextView
            android:id="@+id/languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/teacher_card_placeholder" />

        <TextView
            android:id="@+id/hourly_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/teacher_card_placeholder" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/teacher_card_placeholder" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="3"
            android:numStars="5" />


    </GridLayout>

</androidx.cardview.widget.CardView>