<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_color">

    <android.support.v7.widget.CardView
        android:id="@+id/activities_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Standard_Margin"
        android:padding="@dimen/card_padding">

        <LinearLayout
            android:id="@+id/activity_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:id="@+id/activities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Standard_Margin"
                android:text="@string/activities_label" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Standard_Margin"
        android:padding="@dimen/card_padding">

        <LinearLayout
            android:id="@+id/availability_result_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/availability_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Standard_Margin"
                android:text="@string/availability_label" />

            <RelativeLayout
                android:id="@+id/relative_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal" >
            </RelativeLayout>



            <Button
                android:id="@+id/book_class_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Standard_Margin"
                android:background="@color/colorPrimary"
                android:text="@string/book_class_button_label"
                android:textColor="@color/background_color" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</ScrollView>