<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/viewPadding">
        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginBottom="@dimen/sectionSmallMargin"/>
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="32dp"
            android:layout_marginBottom="@dimen/sectionSmallMargin"/>
        <TextView
            android:id="@+id/userDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/sectionSmallerMargin"/>
        <RatingBar
            android:id="@+id/userRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:layout_gravity="center"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_marginBottom="@dimen/sectionLargeMargin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Class"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Language"/>
            <TextView
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Total Cost"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/classTime"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/classLanguage"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/classCost"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/activities_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/activities_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/activities_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/availabilities_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/background_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textview_border_selected"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/availability_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/availability_label"
                        android:textColor="@color/background_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/availability_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:textColor="@color/background_color" />

                    <LinearLayout
                        android:id="@+id/availabilities_dates"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/availabilities_box_timeslots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"></LinearLayout>

                <Button
                    android:id="@+id/button_book_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textview_border_selected"
                    android:text="@string/book_class_button_label"
                    android:textColor="@color/buttonPrimaryTextColor" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</ScrollView>